Image overflowing issue

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ nav {
   color: #828282;
   font-weight: 700;
   letter-spacing: 1px;
+  font-size: .8rem;
 }
 
 .nav_list a:hover {
@@ -82,7 +83,7 @@ nav {
 }
 
 .header_right img {
-  width: 35rem;
+  width: 30rem;
 }
 
 .orange_color {
